[package]
name = "mini-render"
version = "0.1.0"
edition = "2021"

[lib]
name = "mini_render"
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.24"
fontdue = "0.8"
rquickjs = { version = "0.4", features = ["bindgen", "classes", "properties"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winit = "0.30"
softbuffer = "0.4"
taffy = "0.4"
arboard = "3"
ureq = "2.9"

[build-dependencies]
cbindgen = "0.26"

[[bin]]
name = "mini-app"
path = "src/bin/main.rs"

[[bin]]
name = "mini-app-window"
path = "src/bin/window.rs"
